<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMainScreen">

    <ImageView
        style="@style/ImageStyle"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:contentDescription="@string/quiz"

        android:src="@drawable/quiz_logo"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:fontFamily="@font/spicy_rice"
            android:lineSpacingExtra="8sp"
            android:text="@string/play_quiz"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.667" />

        <Button
            android:id="@+id/btn_play"
            style="@style/ButtonStyle"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/play"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#FFC107"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.777">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>