<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="#FFFFFF"
    tools:context=".FragmentQuiz">


    <ImageView
        android:id="@+id/questions_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/qt"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/qbackground" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="190dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="0dp">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/spicy_rice"
        android:text="@string/questions"
        android:textAlignment="center"
        android:textColor="#0B0101"
        android:textColorHighlight="#323131"
        android:textSize="70sp" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="130dp"
        android:background="#FFFFFF"
        android:src="@drawable/ic_clock"
        app:tint="@color/black" />

    <Chronometer
        android:id="@+id/view_timer"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/spicy_rice"
        android:textColor="@color/black"
        android:textSize="26sp"
        tools:targetApi="24" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/ButtonStyle"
        android:layout_width="160dp"
        android:layout_height="74dp"
        android:layout_gravity="center_horizontal|bottom"
        android:fontFamily="@font/spicy_rice"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#FFC107"
        app:iconTint="#000000" />

</FrameLayout>